--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <div class="row">
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
 
@@ -75,14 +75,23 @@
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <div class="row">
+      <div class="col-lg-4 feature-item">
+        <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
+        <h3 class="feature-title">Easy to use.</h3>
+        <p class="feature-content">So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="col-lg-4 feature-item">
+        <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
+        <h3 class="feature-title">Elite Clientele</h3>
+        <p class="feature-content">We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-lg-4 feature-item">
+        <i class="fa-solid fa-heart fa-4x feature-icon"></i>
+        <h3 class="feature-title">Guaranteed to work.</h3>
+        <p class="feature-content">Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
   </section>
 
